<resources>
    <string name="app_name">Urban Point</string>
    <string name="app_name_with_space">Urban Point</string>
    <string name="action_settings">sdad</string>
    <string name="logoContentDescription">Splash Logo</string>
    <string name="name_heading">Name</string>
    <string name="name_hint">User Username</string>
    <string name="email">Email</string>
    <string name="forgot_password"><u>Forgot PIN?</u></string>
    <string name="forgot_password_title">Forgot PIN</string>
    <string name="forgot_password_button_title">Retrieve your PIN</string>
    <string name="EmailErrorMessage">Please enter email</string>
    <string name="PasswordErrorMessage">Please enter password</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_search_field">Please fill in the search field</string>
    <string name="missing_email">Email is missing</string>
    <string name="missing_password">Password is missing</string>
    <string name="invalid_email_password">Entered email or password are not in correct format</string>
    <string name="incorrect_email_password">Either email or password is incorrect</string>
    <string name="home_screen">Dashboard Home Screen</string>
    <string name="registerScreenTitle">Register</string>
    <string name="nameHint">Full Name</string>
    <string name="emailHint">Email</string>
    <string name="emailHint2">User@email.com</string>
    <string name="passwordHint">Password</string>
    <string name="register">Register</string>
    <string name="network_service_message_title">Network Services</string>
    <string name="network_service_message">Network not available</string>
    <string name="network">Network</string>
    <string name="Ok">OK</string>
    <string name="show_to_user">Show this screen to staff \n to get your offer</string>
    <string name="rate_experience">Rate experience</string>
    <string name="go_to_home"><u>Go to Home</u></string>
    <string name="go_home">Go Home</string>
    <string name="choose_network">Choose your network provider</string>
    <string name="age_text">What\'s your age?</string>
    <string name="invalid_message">Oops! something went wrong. Please try again</string>
    <string name="no_data_received">Could not get any data from the web server</string>
    <string name="invalid_json_format">Invalid JSON format</string>
    <string name="unauthorized_access">Unauthorized Access</string>
    <string name="facebook_app_id">167219837169256</string>
    <string name="sing_in_with_fd">Login With Facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> AIzaSyBFsaQAX9WEdtuwEbBBL0F_eO2I-mvOwi8</string>
    <string name="location_service_message_title">Location Services</string>
    <string name="location_service_message">Kindly enable location services</string>
    <string name="device_not_supported">This device is not supported</string>
    <string name="invalid_google_play_service_found">No valid Google Play Services APK found</string>
    <string name="intro_screen_message">Enjoy your city for less!</string>
    <string name="sign_up_step_one_message">Hi! Nice to meet you, tell us your name</string>
    <string name="sign_up_step_two_message">Are you a girl or guy?</string>
    <string name="sign_up_step_three_message">Tell us your interests so that we can get you what you like</string>
    <string name="sign_up_step_four_message">Are you a Vodafone Qatar customer?</string>
    <string name="sign_up_step_five_message">Please setup your PIN</string>
    <string name="login">Login</string>
    <string name="login_click">Login click</string>
    <string name="get_started">Get Started</string>
    <string name="back">Back</string>
    <string name="enter_email_message">Please enter your email</string>
    <string name="setup_your_account">Set Up Your Account</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="continue_button">Continue</string>
    <string name="expired">Expired</string>
    <string name="food_and_drink">Food &amp; Drink</string>
    <string name="beauty_and_health">Beauty &amp; Health</string>
    <string name="fun_activities">Fun &amp; Leisure</string>
    <string name="retail_services">Retail &amp; Services</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="finish">Finish</string>
    <string name="access_code_edt_text_1">Access Code</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="what_are_you_looking_for_with_space">&#160;&#160;&#160;What are you looking for?</string>
    <string name="received_messages">Received messages</string>
    <string name="contextual_messages_heading">Always know what\'s around</string>
    <string name="contextual_messages">Enable location to sort offers \nbased on their distance from you.</string>
    <string name="contextual_uber_messages">Please enable location permission to request an Uber ride.</string>
    <string name="contextual_uber_btn">Enable</string>
    <string name="app_update_messages">Please update to the latest version of the Urban Point app to continue using it.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_enter_name_message">Please enter your name</string>
    <string name="sign_up_select_gender">Please tell us if you are a girl or guy</string>
    <string name="home">Home</string>
    <string name="pin">PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="purchase_history">Purchase History</string>
    <string name="my_reviews">My Reviews&#160;</string>
    <string name="my_profile">Profile</string>
    <string name="my_notification">Notifications</string>
    <string name="change_cellular_operator">Change Cellular Provider</string>
    <string name="un_subscribe">Unsubscribe</string>
    <string name="un_subscribe_enter_mobile_no">Unsubscribe enter mobile no</string>
    <string name="my_earnings">My Earnings</string>
    <string name="how_to_use">How to Use</string>
    <string name="merchant_pin">Merchant PIN</string>
    <string name="redemption_merchant_pin">Redemption: Merchant PIN</string>
    <string name="contact_us">Contact Us</string>
    <string name="redemption_user_pin">Redemption: User PIN</string>
    <string name="health_fitness_outlets">Health and Fitness Outlets</string>
    <string name="health_fitness_offers">Health and Fitness offers</string>
    <string name="start_screen">Getting started screen</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="app_first_screen">App first screen - welcome screen</string>
    <string name="beauty_spa_outlets">Beauty and Spa Outlets</string>
    <string name="beauty_spa_offers">Beauty and Spa offers</string>
    <string name="food_and_drink_offers">Food and Drink offers</string>
    <string name="food_and_drink_outlets">Food and Drink outlets</string>
    <string name="food_and_drink_offer_details">Food and Drink Offer Details</string>
    <string name="fun_activity_offer">Fun Activities offers</string>
    <string name="ga_removed_favorites">Removed Favorites: </string>
    <string name="food_drink_outlet">Food and Drink Outlets</string>
    <string name="beauty_spa_outlet">Beauty and Spa Outlets</string>
    <string name="fun_activity_outlet">Fun Activities Outlets</string>
    <string name="health_fitness_outlet">Health and Fitness Outlets</string>
    <string name="fav_screen">Favorites</string>
    <string name="incorrect_merchant_pin_msg">Sorry, the Merchant PIN that you have entered is incorrect. Please enter the correct Merchant PIN.</string>
    <string name="incorrect_pin_msg">Sorry, the PIN that you have entered is incorrect. Please enter the correct PIN</string>
    <string name="susbsciption_screen_one">Subscription screen for Vodafone Qatar users - enter phone number</string>
    <string name="offer_package_screen">Non Vodafone Offer Packages</string>
    <string name="logout">Logout</string>
    <string name="ga_menu_drawer_open">Side menu-drawer screen</string>
    <string name="forgot_pin_page">Forgot pin page</string>
    <string name="welcome">Welcome %1$s!</string>
    <string name="your_login_email">Your login email is &#160;</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="change_underline"><u>Change</u></string>
    <string name="change">Change</string>
    <string name="enter_pin_message">Please enter pin</string>
    <string name="sign_up_enter_pin_message">Please enter and confirm your PIN</string>
    <string name="sign_up_enter_confirm_pin_message">Please confirm your PIN</string>
    <string name="natinality_message">Please select \n your country</string>
    <string name="enter_current_pin_message">Please enter current pin</string>
    <string name="enter_new_pin_message">Please enter new pin</string>
    <string name="enter_new_confirm_pin_message">Please enter confirm New PIN</string>
    <string name="enter_pin_not_match">The PINs  you entered do not match, please re-enter the PINs</string>
    <string name="change_pin_enter_pin_not_match">The Current PIN entered is incorrect.</string>
    <string name="no_internet">No internet connection available.</string>
    <string name="invalid_nummber">Please enter a valid mobile number</string>
    <string name="no_fav_marked">You currently do not have any offers marked as favorite</string>
    <string name="request_send">Request send</string>
    <string name="no_offer_availble">No Offers Available</string>
    <string name="pin_does_not_match">The entered code is incorrect</string>
    <string name="how_to_use_one">1. \nVisit the place where you\'d \n like to use the offer</string>
    <string name="how_to_use_two">2. \nClick on the \'\'Get it\'\' button  on the offer screen</string>
    <string name="how_to_use_three">3. \nOne of the staff members needs to enter their PIN to confirm the offer</string>
    <string name="how_to_use_four">The staff member will then apply the discount to your bill. Enjoy the savings!</string>
    <string name="contact_us_how_can_help_you">How can we help you?</string>
    <string name="contact_us_main_message">Just type your message below, and we will get back to you within 24-48 hours</string>
    <string name="please_type_here">Please type here...</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="contact_us_reason_array">
        <item>Reason for contacting</item>
        <item>Need Help</item>
        <item>File Complaint</item>
        <item>Compliment</item>
        <item>Change Cellular Operator</item>
        <item>Other</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="logout_confirm_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="offer_get_frst_month">&#160; &#160;Get 1st Month Free&#160; &#160;</string>
    <string name="offer_subscribe_confrm_code_text">Please enter the \ncode sent by SMS</string>
    <string name="offer_subscribe_confrm_text">We have sent the code by SMS to your number \n Didn\'t receive the code?</string>
    <string name="offer_subscribe_confrm_try_again"><u>Try Again</u></string>
    <string name="subscribe">Subscribe</string>
    <string name="receive_activation_code_message"> You will now receive a text message with your activation code</string>
    <string name="enter_activation_code_below">Please enter your code below</string>
    <string name="not_get_activation_code">Did not receive your activation code? <u>Send again</u></string>
</resources>