<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:indicator="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <include
        android:id="@+id/actionBarHeightLayout"
        layout="@layout/blank_layout_height" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/logoContentDescription"
        android:padding="@dimen/dp10"
        android:src="@drawable/logo" />

    <com.urbanpoint.UrbanPoint.views.customViews.customFontViews.CustomTextView
        style="@style/view_20"
        android:text="@string/intro_screen_message" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer_drawable"
        android:visibility="gone">

    </android.support.v4.view.ViewPager>

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:padding="@dimen/dp20"
        android:visibility="gone"
        indicator:pageColor="@color/gray"
        indicator:radius="@dimen/dp5"
        indicator:strokeColor="@color/gray"
        indicator:strokeWidth="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="@dimen/dp30">

        <com.urbanpoint.UrbanPoint.views.customViews.customFontViews.ButtonView
            android:id="@+id/getStartedButton"
            style="@style/button_style"
            android:layout_width="@dimen/dp120"
            android:layout_height="@dimen/dp25"
            android:background="@drawable/custom_round_button"
            android:contentDescription="@string/get_started"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@drawable/change_text_color_on_button_pressed"
            android:textStyle="normal" />

        <View
            style="@style/view_20"
            android:layout_width="@dimen/dp40"
            android:layout_height="wrap_content" />

        <com.urbanpoint.UrbanPoint.views.customViews.customFontViews.ButtonView
            android:id="@+id/loginButton"
            style="@style/button_style"
            android:layout_width="@dimen/dp120"
            android:background="@drawable/custom_round_button"
            android:contentDescription="@string/login"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@drawable/change_text_color_on_button_pressed"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>

