<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp20"
    android:layout_marginRight="@dimen/dp20"
    android:background="@color/transparent"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/round_edit_text"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messageTitle"
            fontPath="fonts/roboto_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp10"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp5" />

        <TextView
            android:id="@+id/dialogMessageText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/logout_confirm_message"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15"
            android:textStyle="normal" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialogButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/custom_message_box_button"
                android:visibility="gone" />

            <TextView
                android:id="@+id/dialogButtonSeparator"
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:visibility="gone" />

            <Button
                android:id="@+id/dialogButtonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/ok"
                android:textColor="@color/custom_message_box_button" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>