<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/gray">

    <include
        android:id="@+id/actionBarHeightLayout"
        layout="@layout/blank_layout_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/actionBarHeightLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logoContentDescription"
                android:padding="@dimen/dp10"
                android:src="@mipmap/vodafone_logo" />

            <com.urbanpoint.UrbanPoint.views.customViews.customFontViews.CustomTextView
                style="@style/view_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp5"
                android:text="@string/sign_up_step_four_message"

                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp60"
            android:layout_marginRight="@dimen/dp60"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/changeOperatorVodafoneYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/vodafone_yes_default" />

                    <com.urbanpoint.UrbanPoint.views.customViews.customFontViews.CustomTextView
                        style="@style/view_20"
                        android:text="@string/yes"

                        android:textAllCaps="true"
                        android:textSize="@dimen/sp18" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/changeOperatorVodafoneNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/vodafone_no_default" />

                    <com.urbanpoint.UrbanPoint.views.customViews.customFontViews.CustomTextView
                        style="@style/view_20"
                        android:text="@string/no"
                        android:textAllCaps="true"
                        android:textSize="@dimen/sp18" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30"
                android:layout_marginTop="@dimen/dp10"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/changeOperatorSubmitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.10"
                    android:background="@mipmap/change"
                    android:text="@string/submit" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>